fixed layout bugs

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,7 +50,7 @@ p {
 .content-sidebar-map{
 	padding-left: 10px;
 	padding-right: 100px;
-	padding-top: 30px;
+	padding-top: 70px;
 }
 
 .sidebar-map p{
